# crawler-interview

./: README.md  crawler.py  main.py  mocked_main.py  models.py  pyproject.toml
tests/: tests.py
tests/data/: product.html  products_short.html  protected_page.html  results.json
