[project]
name = "aestheticart-supplier-crawler"
version = "0.1.0"
description = "Technical challenge. Please hire me :)"
authors = ["reddytocode"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "playwright>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
