[project]
name = "aestheticart-supplier-crawler"
version = "0.1.0"
description = "Technical challenge. Please hire me :)"
authors = ["reddytocode"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "playwright>=1.55.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
]
